RecuperandoAPI con GET

--- a/src/app/Components/content/content.component.html
+++ b/src/app/Components/content/content.component.html
@@ -3,8 +3,21 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        Aqui empezar a codificar los dashlets
-        <small>test test</small>
+      Usuarios:
+      <div>
+
+        {{Usuarios.data.results[0].username}} 
+
+        
+
+
+
+      </div>
+
+
+
+
+        <small>se mostro lista de usuarios</small>
       </h1>
       <ol class="breadcrumb">
         <li><a href="#"><i class="fa fa-dashboard"></i> cambiar vista</a></li>
