--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -121,7 +121,7 @@
               <!-- The user image in the navbar-->
               <img src="assets/dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
               <!-- hidden-xs hides the username on small devices so only the image appears. -->
-              <span class="hidden-xs">Alexander Pierce</span>
+              <span class="hidden-xs">Admin</span>
             </a>
             <ul class="dropdown-menu">
               <!-- The user image in the menu -->
@@ -129,7 +129,7 @@
                 <img src="assets/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
 
                 <p>
-                  Alexander Pierce - Web Developer
+                User Admin
                   <small>Member since Nov. 2012</small>
                 </p>
               </li>
