ultimo commit de javier

--- a/src/app/Components/content/content.component.html
+++ b/src/app/Components/content/content.component.html
@@ -116,7 +116,11 @@
 
           </tr>
 
-          Subiendo comit a javier
+          Subiendo comit a javier.
+
+
+          .
+           Haciendo Merge en Master
 
 
 
