--- a/src/app/Components/menu/menu.component.html
+++ b/src/app/Components/menu/menu.component.html
@@ -32,8 +32,12 @@
       <ul class="sidebar-menu" data-widget="tree">
         <li class="header">DETALLE</li>
         <!-- Optionally, you can add icons to the links -->
-        <li class="active"><a href="#"><i class="fa fa-link"></i> <span>Usuarios</span></a></li>
-        <li><a href="#"><i class="fa fa-link"></i> <span>Cuentas</span></a></li>
+
+        <li class="active"><a routerLink="/users"><i class="fa fa-link"></i> <span>Users</span></a></li>
+        <li><a routerLink="/transactions"><i class="fa fa-link"></i> <span>Transactions</span></a></li>
+
+
+
         <li class="treeview">
           <a href="#"><i class="fa fa-link"></i> <span>Balance</span>
             <span class="pull-right-container">
@@ -45,6 +49,10 @@
             <li><a href="#">Dashboard 2</a></li>
           </ul>
         </li>
+
+
+
+
       </ul>
       <!-- /.sidebar-menu -->
     </section>
