--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,16 @@
+<div id="contenedor">
 <app-header></app-header>
 <app-menu></app-menu>
-<app-content></app-content>
-<app-footer></app-footer>
+
+
+
+
+
+
+
+
 <app-setting></app-setting>
+
+<router-outlet></router-outlet>
+<app-footer></app-footer>
+</div>
