--- a/src/app/Components/menu/menu.component.html
+++ b/src/app/Components/menu/menu.component.html
@@ -30,7 +30,7 @@
 
       <!-- Sidebar Menu -->
       <ul class="sidebar-menu" data-widget="tree">
-        <li class="header">DETALLE</li>
+        <li class="header">REHIVE</li>
         <!-- Optionally, you can add icons to the links -->
 
         <li class="active"><a routerLink="/users"><i class="fa fa-link"></i> <span>Users</span></a></li>
@@ -39,7 +39,7 @@
 
 
         <li class="treeview">
-          <a href="#"><i class="fa fa-link"></i> <span>Balance</span>
+          <a routerLink="/summary"><i class="fa fa-link"></i> <span>Summary</span>
             <span class="pull-right-container">
                 <i class="fa fa-angle-left pull-right"></i>
               </span>
