--- a/src/app/Components/summary/summary.component.html
+++ b/src/app/Components/summary/summary.component.html
@@ -56,7 +56,8 @@
                                     </tbody>
                                     <tbody *ngIf="Transa?.length == 0">
                                         <tr>
-                                        <td colspan="5" class="no-data-available">No data!</td>
+                                        <td colspan="5" class="no-data-available"></td>
+                                        <img src="../../../assets/images/loading.gif">
                                         </tr>
                                     <tbody>
                                     </table>
