--- a/src/app/Components/transactions/transactions.component.html
+++ b/src/app/Components/transactions/transactions.component.html
@@ -49,7 +49,12 @@
                   </tbody>
                   <tbody *ngIf="Transa?.length == 0">
                     <tr>
-                      <td colspan="5" class="no-data-available">No data!</td>
+                      <p>
+                     
+                      <td colspan="5" class="no-data-available"></td>
+
+                      <img src="../../../assets/images/loading.gif">
+                      </p>
                     </tr>
                   <tbody>
           
