--- a/src/app/Components/users/users.component.html
+++ b/src/app/Components/users/users.component.html
@@ -20,9 +20,11 @@
 
         <h1> USUARIOS: </h1>
         <h4>
-        <div>
+          <div>
+           <!--<div class ="loading" *ngif="loading">
+      <img src="../../../assets/images/loading.gif">-->
           <!--<table class="table table-hover table-fixed">-->
-            <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
+            <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover" >
             <!--Table head-->
             <thead>
                 <tr>
@@ -51,7 +53,8 @@
             </tbody>
             <tbody *ngIf="Usuarios?.length == 0">
               <tr>
-                <td colspan="5" class="no-data-available">No data!</td>
+                <td colspan="5" class="no-data-available"></td>
+                <img src="../../../assets/images/loading.gif">
               </tr>
             </tbody>
   
