--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@
     margin: 0;
     font-style: normal;
 }
-#contenedor {
-    width: 100%;
-    height: 100%;
-  }
+.loading{
+    margin: 100px;
+
+}
