--- a/src/app/Components/users/users.component.html
+++ b/src/app/Components/users/users.component.html
@@ -18,7 +18,7 @@
   
   
 
-        <h1> USUARIOS: </h1>
+        <h1 *ngIF> USUARIOS: </h1>
         <h4>
           <div>
            <!--<div class ="loading" *ngif="loading">
@@ -53,12 +53,12 @@
             </tbody>
             <tbody *ngIf="Usuarios?.length == 0">
               <tr>
-                <td colspan="5" class="no-data-available"></td>
+                <td colspan="10" class="no-data-available"></td>
                 <img src="../../../assets/images/loading.gif">
               </tr>
             </tbody>
   
-            <!--Table body-->
+            <!--Table bodyy-->
           </table>
         </div>
       </h4>
