--- a/src/app/Components/content/content.component.html
+++ b/src/app/Components/content/content.component.html
@@ -35,18 +35,21 @@
           </thead>
           <!--Table head-->
           <!--Table body-->
-          <tbody>
-            <tr *ngFor="let usuario of Usuarios" >
+          <tbody *ngIf="Usuarios?.length != 0">
+            <ng-container *ngFor="let usuario of Usuarios">
+            <tr>
                 <td>{{usuario.email}}</td>
                 <td>{{usuario.username | uppercase}}</td>
                 <td>{{usuario.first_name}}</td>
                 <td>{{usuario.last_name}}</td>
                 <td>{{usuario.account}}</td>
                 <td>{{usuario.balance/100 | currency}}</td>
-               
+
                 <td>{{usuario.last_login  | date  :'medium'}}</td>
             </tr>
+            </ng-container>
           </tbody>
+
           <tbody *ngIf="Usuarios?.length == 0">
             <tr>
               <td colspan="5" class="no-data-available">No data!</td>
@@ -75,7 +78,7 @@
                 <th>Nombre</th>
                 <th>Estado</th>
                 <th>Cuenta</th>
-               
+
             </tr>
         </thead>
 
@@ -90,7 +93,7 @@
               </td>
               <td>{{trans.status}}</td>
               <td>{{trans.account}}</td>
-       
+
           </tr>
         </ng-container>
 
@@ -138,7 +141,6 @@
 
           </tr>
         </ng-container>
-       test
 
         </tbody>
         <tbody *ngIf="Transa?.length == 0">
@@ -150,10 +152,6 @@
 
     </div>
   </h4>
-
-
-
-
 
   </section>
   <!-- /.content -->
