--- a/src/app/Components/summary/summary.component.html
+++ b/src/app/Components/summary/summary.component.html
@@ -1,5 +1,5 @@
 <!-- Content Wrapper. Contains page content -->
-<div class="content-wrapper">
+<div class="content-wrapper content-height">
     <!-- Content Header (Page header) -->
     <!--<section class="content-header">
         <small></small>
@@ -10,7 +10,7 @@
     </section>-->
   
     <!-- Main content -->
-    <section class="content container-fluid">
+    <section class="content container-fluid ">
   
       <!--------------------------
         | Your Page Content Here |
