--- a/src/app/Components/transactions/transactions.component.html
+++ b/src/app/Components/transactions/transactions.component.html
@@ -1,5 +1,5 @@
 <!-- Content Wrapper. Contains page content -->
-<div class="content-wrapper">
+<div class="content-wrapper content-height">
     <!-- Content Header (Page header) -->
     <!--<section class="content-header">
         <small></small>
@@ -17,6 +17,7 @@
               <!--------------------------
                 | Your Page Content Here |  
                 -------------------------->
+                <h1>Transacciones</h1>
                 <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
                   <!--Table head-->
                   <ng-container *ngIf="Transa?.length != 0">
