--- a/src/app/Components/users/users.component.html
+++ b/src/app/Components/users/users.component.html
@@ -1,5 +1,5 @@
 <!-- Content Wrapper. Contains page content -->
-<div class="content-wrapper">
+<div class="content-wrapper content-height">
     <!-- Content Header (Page header) -->
     <!--<section class="content-header">
         <small></small>
@@ -18,7 +18,7 @@
   
   
 
-        <h1 *ngIF> USUARIOS: </h1>
+        <h1> Usuarios: </h1>
         <h4>
           <div>
            <!--<div class ="loading" *ngif="loading">
