--- a/src/app/Components/menu/menu.component.html
+++ b/src/app/Components/menu/menu.component.html
@@ -2,7 +2,7 @@
   <aside class="main-sidebar">
 
     <!-- sidebar: style can be found in sidebar.less -->
-    <section class="sidebar">
+    <section class="sidebar-wrapper">
 
       <!-- Sidebar user panel (optional) -->
       <div class="user-panel">
@@ -33,7 +33,7 @@
         <li class="header">REHIVE</li>
         <!-- Optionally, you can add icons to the links -->
 
-        <li class="active"><a routerLink="/users"><i class="fa fa-link"></i> <span>Users</span></a></li>
+        <li><a routerLink="/users"><i class="fa fa-link"></i> <span>Users</span></a></li>
         <li><a routerLink="/transactions"><i class="fa fa-link"></i> <span>Transactions</span></a></li>
 
 
