--- a/src/app/Components/menu/menu.component.html
+++ b/src/app/Components/menu/menu.component.html
@@ -35,7 +35,7 @@
 
         <li><a routerLink="/users"><i class="fa fa-link"></i> <span>Users</span></a></li>
         <li><a routerLink="/transactions"><i class="fa fa-link"></i> <span>Transactions</span></a></li>
-
+ 
 
 
         <li class="treeview">
@@ -49,7 +49,7 @@
             <li><a href="#">Dashboard 2</a></li>
           </ul>
         </li>
-
+        <li><a routerLink="/summary2"><i class="fa fa-link"></i> <span>Sumary 2</span></a></li>
 
 
 
