--- a/src/app/Components/summary2/summary2.component.html
+++ b/src/app/Components/summary2/summary2.component.html
@@ -18,23 +18,24 @@
         <h1>Summary</h1>
 
           <div class="row">
+
             <div class="col-md-3 col-sm-6 col-xs-12">
               <div class="info-box">
-                <span class="info-box-icon bg-aqua">
-                  <i class="fa fa-usd">
+                <span class="info-box-icon bg-grey">
+                  <i class="fa fa-money">
                   </i>
                 </span>
                 <div class="info-box-content">
-                  <span class="info-box-text">Total Available Balance</span>
+                  <span class="info-box-text">Total Income</span>
                   <span class="info-box-number">
-                    {{currency.available_balance_total/100 | currency}}
+                    {{currency.sum_credits_pending / 100 | currency}}
                   </span>
                 </div>
-   
+
               </div>
-      
+
             </div>
-    
+
             <div class="col-md-3 col-sm-6 col-xs-12">
               <div class="info-box">
                 <span class="info-box-icon bg-yellow">
@@ -44,14 +45,30 @@
                 <div class="info-box-content" onclick="">
                   <span class="info-box-text">Total Balance</span>
                   <span class="info-box-number">
-                    {{currency.balance_total/100 | currency}}
+                    {{currency.balance_total / 100 | currency}}
                   </span>
                 </div>
-          
+
               </div>
-          
+
             </div>
-   
+
+            <div class="col-md-3 col-sm-6 col-xs-12">
+              <div class="info-box">
+                <span class="info-box-icon bg-aqua">
+                  <i class="fa fa-usd">
+                  </i>
+                </span>
+                <div class="info-box-content">
+                  <span class="info-box-text">Total Available Balance</span>
+                  <span class="info-box-number">
+                    {{currency.available_balance_total / 100 | currency}}
+                  </span>
+                </div>
+
+              </div>
+
+            </div>
 
             <div class="clearfix visible-sm-block"></div>
 
@@ -62,18 +79,19 @@
                   </i>
                 </span>
                 <div class="info-box-content">
-                  <span class="info-box-text">Deposit</span>
+                  <span class="info-box-text">Total Pending Deposits</span>
                   <span class="info-box-number">
-                    {{currency.balance_24h/100 | currency}}
-                    
-                  </span>
+                    {{currency.sum_debits_pending / 100 | currency}}
+                  </span>0
                 </div>
-            
+
               </div>
-             
+
             </div>
-      
+
           </div>
+
+          
 
     </section>
     <!-- /.content -->
